# discord-saizeriya-gacha-bot

./: .dockerignore  .env_example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Shuttle.toml  Taskfile.yml  docker-compose.yml  rust-toolchain.toml
.github/workflows/: check.yml  deploy.yml
src/: main.rs
src/commands/: mod.rs  saizeriya_gacha.rs  saizeriya_get_by_code.rs
src/data/: menu.json  menu.rs
