[package]
name = "discord-saizeriya-gacha-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
itertools = "0.13.0"
shuttle-runtime = "0.47.0"
shuttle-serenity = "0.47.0"
anyhow = "1.0.86"
tracing = "0.1.40"
